--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   geolocator: ^10.1.0
   weather: ^3.1.1
   intl: ^0.18.1
+  bloc: ^8.1.2
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
   gap: ^3.0.1
